// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withDataReducer should handle TEST_CLEAR_ERROR 1`] = `
Object {
  "hasData": false,
  "hasError": false,
  "isFetching": false,
  "isLoading": true,
  "message": Object {
    "text": "",
    "type": "empty",
  },
}
`;

exports[`withDataReducer should handle TEST_DATA_FAILED 1`] = `
Object {
  "hasData": false,
  "hasError": true,
  "isFetching": false,
  "isLoading": true,
  "message": Object {
    "text": "some-error",
    "type": "error",
  },
}
`;

exports[`withDataReducer should handle TEST_DATA_PENDING 1`] = `
Object {
  "hasData": false,
  "hasError": false,
  "isFetching": true,
  "isLoading": true,
  "message": Object {
    "text": "",
    "type": "empty",
  },
}
`;

exports[`withDataReducer should handle TEST_DATA_RESOLVED 1`] = `
Object {
  "hasData": true,
  "hasError": false,
  "isFetching": false,
  "isLoading": false,
  "message": Object {
    "text": "",
    "type": "empty",
  },
  "testData": "testData",
}
`;

exports[`withDataReducer should handle TEST_HIDE_LOADING 1`] = `
Object {
  "hasData": false,
  "hasError": false,
  "isFetching": false,
  "isLoading": false,
  "message": Object {
    "text": "",
    "type": "empty",
  },
}
`;

exports[`withDataReducer should return the initial state 1`] = `
Object {
  "hasData": false,
  "hasError": false,
  "isFetching": false,
  "isLoading": true,
  "message": Object {
    "text": "",
    "type": "empty",
  },
}
`;
